# AeroSync

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_REQUIREMENTS.md  Cargo.toml  DOCS_GUIDE.md  FIX_COMPLETED.md  LICENSE  PRODUCT_REVIEW.md  PUSH_GUIDE.md  QUICK_START.md  README.md  README.zh-CN.md  SECURITY.md  VERIFICATION_GUIDE.md  demo_fix_verification.sh  deny.toml  install.sh  prepare_test.sh
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: python-release.yml  python.yml  release.yml  rust.yml
aerosync-core/: Cargo.toml
aerosync-core/src/: audit.rs  discovery.rs  error.rs  error_advice.rs  file_manager.rs  history.rs  lib.rs  metrics.rs  preflight.rs  progress.rs  resume.rs  routing.rs  server.rs  transfer.rs
aerosync-core/src/auth/: config.rs  middleware.rs  mod.rs  store.rs  token.rs
aerosync-core/tests/: new_endpoints.rs  watch_bench.rs  watch_reconnect.rs
aerosync-domain/: Cargo.toml  README.md
aerosync-domain/src/: error.rs  lib.rs  manifest.rs  metadata.rs  receipt.rs  session.rs  storage.rs  transfer_session.rs
aerosync-infra/: Cargo.toml  README.md
aerosync-infra/src/: audit.rs  history.rs  history_sqlite.rs  lib.rs  receipt_journal.rs  resume.rs  tls.rs
aerosync-mcp/: Cargo.toml  README.md
aerosync-mcp/src/: lib.rs  main.rs  recovery.rs  server.rs  task_store.rs
aerosync-mcp/tests/: mcp_integration.rs  mcp_tool_schema_snapshot.rs
aerosync-mcp/tests/snapshots/: cancel_receipt.json  discover_receivers.json  get_receiver_status.json  get_transfer_status.json  list_history.json  request_file.json  send_directory.json  send_file.json  start_receiver.json  stop_receiver.json  wait_receipt.json
aerosync-proto/: Cargo.toml  README.md  build.rs
aerosync-proto/proto/aerosync/wire/: v1.proto
aerosync-proto/src/: lib.rs
aerosync-protocols/: Cargo.toml
aerosync-protocols/src/: adapter.rs  circuit_breaker.rs  ftp.rs  http.rs  lib.rs  quic.rs  ratelimit.rs  s3.rs  traits.rs  utils.rs
aerosync-protocols/tests/: pipeline.rs
aerosync-py/: Cargo.toml  README.md  build.rs  pyproject.toml
aerosync-py/python/aerosync/: __init__.py  _config.py  _native.pyi  _types.py
aerosync-py/src/: client.rs  config.rs  errors.rs  exceptions.rs  lib.rs  receipt.rs  receiver.rs  records.rs  runtime.rs
aerosync-py/tests/: test_client.py  test_config.py  test_discover.py  test_errors.py  test_history.py  test_killer_demo.py  test_metadata_propagation.py  test_metadata_validation.py  test_quic_metadata_propagation.py  test_receipt.py  test_receiver.py  test_receiver_idle_timeout.py  test_receiver_lifecycle.py  test_send_sources.py  test_smoke.py
aerosync-rendezvous/: Cargo.toml  README.md
aerosync-rendezvous/migrations/: 20260423180000_rfc004_initial.sql  20260424120000_rfc004_p2_peers_namespace.sql
aerosync-rendezvous/src/: jwt.rs  lib.rs  main.rs  peers.rs  sessions.rs  signaling.rs
aerosync-rendezvous/tests/: p2_punch_quic_e2e.rs
aerosync-ui/: Cargo.toml
aerosync-ui/src/: cli.rs  egui_app.rs  events.rs  lib.rs  tauri_app.rs
docs/: ARCHITECTURE_AND_DESIGN.md  MIGRATION-v0.3.0.md  RELEASE-v0.2.0.md  architecture.md  auth-quickstart.md  auth-token-completion-report.md  auth-token-design.md  auth-token-summary.md  bugfix-toml-error-conversion.md  install.md  mcp-integration.md  phase5-plan.md  protocol-design.md  release-checklist.md  v0.3.0-frozen-api.md  v0.3.0-refactor-plan.md
docs/install/: homebrew.rb
docs/operations/: rendezvous.md  wan-r2-field-matrix.md  wan-r2-field-report-template.md  wan-r2-release-ops.md  wan-r2-slo-goals.md  wan-r2-stable-release-checklist.md  wan-r2-two-machine-test.md
docs/protocol/: metadata-v1.md
docs/python/: RELEASE-CHECKLIST.md  cookbook.md
docs/rfcs/: README.md  RFC-001-python-sdk.md  RFC-002-receipt-protocol.md  RFC-003-metadata-envelope.md  RFC-004-p2-protocol-security.md  RFC-004-wan-rendezvous.md
examples/: README_agent.md  auth_token_example.rs  receiver_agent.py  sender_agent.py
scripts/: ci-r2-wan-readiness.sh  package-local-release.sh  rust-gate.sh
src/: config.rs  lib.rs  main.rs
src/core/: audit.rs  capabilities.rs  discovery.rs  error.rs  error_advice.rs  file_manager.rs  history.rs  incoming_file.rs  metadata.rs  mod.rs  preflight.rs  receipt.rs  receipt_registry.rs  receipts_http.rs  resume.rs  server.rs  sniff.rs  tls.rs  transfer.rs
src/core/auth/: config.rs  middleware.rs  mod.rs  store.rs  token.rs
src/protocols/: adapter.rs  circuit_breaker.rs  ftp.rs  http.rs  mod.rs  quic.rs  quic_receipt.rs  ratelimit.rs  s3.rs  traits.rs  utils.rs
src/wan/: hole_punch.rs  mod.rs  punch_signaling.rs  receiver_lifecycle.rs  rendezvous.rs
tests/: cli_behavior_e2e.rs  cli_help_smoke.rs  core_new_endpoints.rs  core_watch_bench.rs  core_watch_reconnect.rs  cross_rfc_smoke.rs  http_receipt_ack_e2e.rs  metadata_e2e.rs  metadata_http_propagation.rs  protocols_pipeline.rs  quic_metadata_propagation.rs  quic_receipt_e2e.rs  receipt_cli_smoke.rs  receipt_journal_recovery.rs  receipts_e2e.rs  receipts_http_integration.rs  receiver_local_addr.rs
tests/common/: mod.rs
