[package]
name = "aerosync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aerosync"
path = "src/main.rs"

[features]
default = []
egui = ["aerosync-ui/egui"]

[dependencies]
aerosync-core = { path = "aerosync-core" }
aerosync-protocols = { path = "aerosync-protocols" }
aerosync-ui = { path = "aerosync-ui" }
tokio = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { workspace = true }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
anyhow = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
toml = "0.8"
serde = { workspace = true }
shellexpand = "3"
tokio-tungstenite = "0.20"
mdns-sd = "0.10"
zeroize = { workspace = true }

[dev-dependencies]
tempfile = "3"

[workspace]
members = [
    "aerosync-core",
    "aerosync-protocols",
    "aerosync-ui",
    "aerosync-mcp"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
quinn = "0.10"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
crossbeam-channel = "0.5"
futures = "0.3"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
zeroize = { version = "1", features = ["derive", "serde"] }
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1