[package]
name = "aerosync"
description = "Fast, agent-friendly file transfer with auto protocol negotiation (HTTP/QUIC), resumable chunked uploads, and CLI. Library + binary."
keywords = ["file-transfer", "mcp", "quic", "cli", "agent"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
# Drop repo-level files that would otherwise leak into the published
# tarball. The defaults pull everything that's not gitignored, which
# for a workspace-root crate sweeps up `.cursor/` IDE state, `.github/`
# CI config, internal review/handoff docs, and one-off shell scripts.
# Users `cargo install aerosync` should only see crate sources + the
# user-facing README/CHANGELOG/LICENSE.
exclude = [
    ".cursor/**",
    ".github/**",
    "CRITICAL_REQUIREMENTS.md",
    "PRODUCT_REVIEW.md",
    "TODO.local.md",
    "demo_fix_verification.sh",
    "docs/rfcs/**",
    "terminals/**",
]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
name = "aerosync"
path = "src/lib.rs"

[[bin]]
name = "aerosync"
path = "src/main.rs"

[dependencies]
# CLI-only deps
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
toml = "0.8"
shellexpand = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Core engine deps (formerly aerosync-core)
# HTTP/HTTPS/WebSocket server stack — migrated from warp 0.3 to axum 0.7
# (see commit "refactor(server): migrate warp 0.3 → axum 0.7"). axum-server
# uses the `tls-rustls-no-provider` feature so we keep our explicitly
# installed `ring` crypto provider (see ensure_crypto_provider_installed).
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit"] }
rcgen = { version = "0.13", features = ["pem"] }
bytes = "1.0"
# PEM parsing comes from rustls-pki-types::pem (PemObject trait) — we no
# longer pull rustls-pemfile as a direct dep (the crate is unmaintained per
# RUSTSEC-2025-0134; it survives only as a transitive dep of axum-server's
# tls-rustls-no-provider feature, which is filtered out by our
# `unmaintained = "workspace"` policy in deny.toml).
rustls-pki-types = "1"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
dirs-next = "2"
mdns-sd = "0.10"
hostname = "0.3"
tokio-tungstenite = "0.20"

# Protocol deps (formerly aerosync-protocols)
rand = "0.8"
tokio-util = { version = "0.7", features = ["io"] }
hmac = "0.12"
urlencoding = "2.1"
url = "2"
suppaftp = { version = "8.0.2", features = ["tokio"] }

# Workspace-managed common deps
tokio = { workspace = true }
quinn = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
rustls = { workspace = true }
zeroize = { workspace = true }
memmap2 = { workspace = true }

# Wire protocol types (RFC-002). The proto crate owns the .proto file
# and the generated bindings; we just consume them.
aerosync-proto = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Metadata envelope (RFC-003).
# `infer` is a tiny zero-dep magic-number sniffer (~30 KiB) used by
# `core::sniff::sniff_content_type`. `mime_guess` provides the
# extension-based fallback when `infer` returns nothing — already a
# transitive dep via reqwest, promoted to a direct dep here for clarity.
# `chrono` powers the typed `expires_at` accessor on `MetadataBuilder`
# and `HistoryFilter::since`/`until` filtering; minimal feature set
# (no wasm bindings, no oldtime fallback) to keep the dependency
# footprint tight.
infer = { version = "0.19", default-features = false }
mime_guess = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-tungstenite = "0.20"
# Workspace-internal dep used only by `tests/receipts_e2e.rs` to drive the
# MCP `cancel_receipt` tool function directly (no out-of-process MCP server).
# Path-only — adds nothing to the external dependency surface or `cargo deny`
# advisories.
aerosync-mcp = { path = "aerosync-mcp" }

[workspace]
members = [
    "aerosync-mcp",
    "aerosync-proto",
    "aerosync-py",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["TechVerseOdyssey <tiancheng-liu@qq.com>"]
license = "MIT"
repository = "https://github.com/TechVerseOdyssey/AeroSync"
homepage = "https://github.com/TechVerseOdyssey/AeroSync"
documentation = "https://docs.rs/aerosync"
rust-version = "1.89"

[workspace.dependencies]
# Inter-crate deps within this workspace.
aerosync = { path = ".", version = "0.2.0" }
aerosync-proto = { path = "aerosync-proto", version = "0.2.0" }
# Wire-protocol stack (RFC-002). prost / prost-build are pinned at the
# workspace level so aerosync-proto and any future consumer (e.g. the
# Python binding crate) reference the same versions.
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["full"] }
# quinn 0.11 + rustls 0.23 upgrade (fixes RUSTSEC-2026-0037 Quinn DoS and
# unblocks rustls-pemfile 2 / rustls-pki-types migration).
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
crossbeam-channel = "0.5"
futures = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
zeroize = { version = "1", features = ["derive", "serde"] }
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
