[package]
name = "aerosync"
description = "Fast, agent-friendly file transfer with auto protocol negotiation (HTTP/QUIC), resumable chunked uploads, and CLI. Library + binary."
keywords = ["file-transfer", "mcp", "quic", "cli", "agent"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
# Drop repo-level files that would otherwise leak into the published
# tarball. The defaults pull everything that's not gitignored, which
# for a workspace-root crate sweeps up `.cursor/` IDE state, `.github/`
# CI config, internal review/handoff docs, and one-off shell scripts.
# Users `cargo install aerosync` should only see crate sources + the
# user-facing README/CHANGELOG/LICENSE.
exclude = [
    ".cursor/**",
    ".github/**",
    "CRITICAL_REQUIREMENTS.md",
    "PRODUCT_REVIEW.md",
    "TODO.local.md",
    "demo_fix_verification.sh",
    "docs/rfcs/**",
    "terminals/**",
]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
name = "aerosync"
path = "src/lib.rs"

[[bin]]
name = "aerosync"
path = "src/main.rs"
# Binary requires the full default feature set so the CLI keeps full
# functionality: HTTP + QUIC transports, S3/FTP routing in
# AutoAdapter, mDNS LAN discovery, and the receipt-registry helpers
# wired through to the MCP layer. Library-only consumers can still
# build smaller variants via `--no-default-features --features http,quic`.
required-features = ["http", "quic", "mdns", "mcp-helpers"]

[features]
# Default keeps every protocol and helper enabled so the published
# `aerosync` CLI / MCP binary works exactly as before. Embedders who
# want a lean library can opt out via `--no-default-features`.
default = ["http", "quic", "s3", "ftp", "mdns", "mcp-helpers"]

# HTTP transport (axum + reqwest stack). Currently always-on at the
# crate level — listed as a feature so future users can write their
# own conditional code against it and so we have a stable name to
# pair with the others. Adds no extra deps because axum/reqwest are
# also pulled in by the HTTPS path.
http = []

# QUIC transport (quinn 0.11 + the receipt frame protocol in
# `protocols::quic_receipt`). Pulls in `quinn` and gates the QUIC
# server in `core::server::start()` plus the QUIC routing branch in
# `protocols::adapter::AutoAdapter`. HTTPS still works without this
# feature; we share the rustls crypto provider through `core::tls`.
quic = ["dep:quinn"]

# AWS S3 / MinIO destination support in `protocols::s3` +
# AutoAdapter::with_s3 routing. No additional dependencies —
# `S3Transfer` is implemented directly on top of `reqwest` + `hmac`
# + `sha2`, all of which are already required by the HTTP transport.
# Disabling this feature drops the module body and the `s3://` URL
# branch in `AutoAdapter`.
s3 = []

# FTP / FTPS destination support in `protocols::ftp` +
# AutoAdapter::with_ftp routing. Pulls in `suppaftp` and its tokio
# adapter; the heaviest of the optional protocol deps for embedders
# that don't need FTP.
ftp = ["dep:suppaftp"]

# LAN service discovery via mDNS (`mdns-sd`). Gates the
# `core::discovery::AeroSyncMdns` module, the mDNS broadcast call in
# `FileReceiver::start()`, and the mDNS-related re-exports.
mdns = ["dep:mdns-sd"]

# Receipt-registry helpers consumed by `aerosync-mcp` and the
# Python `Receiver` SDK to surface RFC-002 receipts over the MCP
# control surface. No extra deps — purely a hook for downstream
# crates to gate their own optional code paths.
mcp-helpers = []

# v0.3.0 placeholders (see `docs/rfcs/RFC-004-wan-rendezvous.md`).
# These compile to empty modules today (just `pub mod rendezvous {}`
# / `pub mod relay {}`) so downstream Cargo.toml files can begin
# referencing the future feature names without a breaking rename.
wan-rendezvous = []
wan-relay = []

[dependencies]
# CLI-only deps
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
toml = "0.8"
shellexpand = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Core engine deps (formerly aerosync-core)
# HTTP/HTTPS/WebSocket server stack — migrated from warp 0.3 to axum 0.7
# (see commit "refactor(server): migrate warp 0.3 → axum 0.7"). axum-server
# uses the `tls-rustls-no-provider` feature so we keep our explicitly
# installed `ring` crypto provider (see ensure_crypto_provider_installed).
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit"] }
rcgen = { version = "0.13", features = ["pem"] }
bytes = "1.0"
# PEM parsing comes from rustls-pki-types::pem (PemObject trait) — we no
# longer pull rustls-pemfile as a direct dep (the crate is unmaintained per
# RUSTSEC-2025-0134; it survives only as a transitive dep of axum-server's
# tls-rustls-no-provider feature, which is filtered out by our
# `unmaintained = "workspace"` policy in deny.toml).
rustls-pki-types = "1"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
dirs-next = "2"
# Optional — gated by the `mdns` feature. Drops the LAN discovery
# stack (and its UDP socket scaffolding) for embedders who don't
# need it.
mdns-sd = { version = "0.10", optional = true }
hostname = "0.3"
tokio-tungstenite = "0.20"

# Protocol deps (formerly aerosync-protocols)
rand = "0.8"
tokio-util = { version = "0.7", features = ["io"] }
hmac = "0.12"
urlencoding = "2.1"
url = "2"
# Optional — gated by the `ftp` feature. Heaviest of the per-
# protocol opt-in deps; dropping it gives the largest binary-size
# delta in measured release builds.
suppaftp = { version = "8.0.2", features = ["tokio"], optional = true }

# Workspace-managed common deps
tokio = { workspace = true }
# Optional — gated by the `quic` feature. The HTTPS path still works
# without QUIC because the rustls crypto provider is now installed
# via `core::tls::ensure_rustls_provider_installed`, not via a quic
# module helper.
quinn = { workspace = true, optional = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
rustls = { workspace = true }
zeroize = { workspace = true }
memmap2 = { workspace = true }

# Wire protocol types (RFC-002). The proto crate owns the .proto file
# and the generated bindings; we just consume them.
aerosync-proto = { workspace = true }
# v0.3.0 DDD layering. `aerosync-domain` owns pure logic
# (`AeroSyncError`, `Result`, `MetadataBuilder`, the receipt state
# machine, future `TransferSession`); `aerosync-infra` owns concrete
# IO impls (TLS bootstrap today; JSON storage / audit logger /
# atomic-write resume in Phase 2). The root crate re-exports these
# via `pub use aerosync_{domain,infra}::*` in `src/core/mod.rs` so
# existing import paths keep resolving.
aerosync-domain = { workspace = true }
aerosync-infra = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
# Used by `core::server` (HTTP receiver) and `protocols::http` (sender)
# to encode the wire-format `Metadata` envelope into the
# `X-Aerosync-Metadata` HTTP header, per RFC-003 §8.4. The proto
# bytes are base64-standard with padding so the header survives the
# strictest gateway intermediaries; we deliberately accept slightly
# larger encoded sizes vs. URL-safe-no-padding for that property.
base64 = "0.22"

# Metadata envelope (RFC-003).
# `infer` is a tiny zero-dep magic-number sniffer (~30 KiB) used by
# `core::sniff::sniff_content_type`. `mime_guess` provides the
# extension-based fallback when `infer` returns nothing — already a
# transitive dep via reqwest, promoted to a direct dep here for clarity.
# `chrono` powers the typed `expires_at` accessor on `MetadataBuilder`
# and `HistoryFilter::since`/`until` filtering; minimal feature set
# (no wasm bindings, no oldtime fallback) to keep the dependency
# footprint tight.
infer = { version = "0.19", default-features = false }
mime_guess = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-tungstenite = "0.20"
# Workspace-internal dep used only by `tests/receipts_e2e.rs` to drive the
# MCP `cancel_receipt` tool function directly (no out-of-process MCP server).
# Path-only — adds nothing to the external dependency surface or `cargo deny`
# advisories.
aerosync-mcp = { path = "aerosync-mcp" }

[workspace]
members = [
    "aerosync-domain",
    "aerosync-infra",
    "aerosync-mcp",
    "aerosync-proto",
    "aerosync-py",
]
resolver = "2"

[workspace.package]
version = "0.3.0-rc1"
edition = "2021"
authors = ["TechVerseOdyssey <tiancheng-liu@qq.com>"]
license = "MIT"
repository = "https://github.com/TechVerseOdyssey/AeroSync"
homepage = "https://github.com/TechVerseOdyssey/AeroSync"
documentation = "https://docs.rs/aerosync"
rust-version = "1.89"

[workspace.dependencies]
# Inter-crate deps within this workspace.
aerosync = { path = ".", version = "0.3.0-rc1" }
aerosync-proto = { path = "aerosync-proto", version = "0.3.0-rc1" }
# v0.3.0 DDD layering. `aerosync-domain` owns pure business logic
# (TransferSession, Receipt state machine, Storage traits);
# `aerosync-infra` owns concrete IO impls (TLS bootstrap, JSON/JSONL
# storage, audit logger). Both shipped wholesale by 0.3.0-rc1 (Phases
# 1-3 complete); the in-tree paths still drive dev builds. See
# `docs/v0.3.0-refactor-plan.md` and `docs/v0.3.0-frozen-api.md` §1.6.
aerosync-domain = { path = "aerosync-domain", version = "0.3.0-rc1" }
aerosync-infra = { path = "aerosync-infra", version = "0.3.0-rc1" }
# Wire-protocol stack (RFC-002). prost / prost-build are pinned at the
# workspace level so aerosync-proto and any future consumer (e.g. the
# Python binding crate) reference the same versions.
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["full"] }
# quinn 0.11 + rustls 0.23 upgrade (fixes RUSTSEC-2026-0037 Quinn DoS and
# unblocks rustls-pemfile 2 / rustls-pki-types migration).
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
crossbeam-channel = "0.5"
futures = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
zeroize = { version = "1", features = ["derive", "serde"] }
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
