[package]
name = "aerosync-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
warp = "0.3"
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = "0.11"
bytes = "1.0"
reqwest = { version = "0.11", features = ["multipart", "json", "stream"] }
rustls-native-certs = "0.6"
rustls-pemfile = "1"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
async-trait = "0.1"
dirs-next = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }