[package]
name = "aerosync-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aerosync-mcp"
path = "src/main.rs"

[dependencies]
aerosync-core = { path = "../aerosync-core" }
aerosync-protocols = { path = "../aerosync-protocols" }
rmcp = { version = "1.4.0", features = ["server", "macros", "transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
uuid = { workspace = true }
zeroize = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
