[package]
name = "aerosync-mcp"
description = "Model Context Protocol (MCP) server exposing AeroSync as 8 tools (send_file, send_directory, start_receiver, ...) for AI agents like Claude / ChatGPT / Cursor."
keywords = ["mcp", "aerosync", "ai-agent", "claude", "llm"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
name = "aerosync_mcp"
path = "src/lib.rs"

[[bin]]
name = "aerosync-mcp"
path = "src/main.rs"

[dependencies]
aerosync = { workspace = true }
rmcp = { version = "1.4.0", features = ["server", "macros", "transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
# Needed for parsing RFC-3339 `since`/`until` filters on `list_history`
# and shaping the metadata-aware HistoryQuery; mirrors the feature set
# pinned in the workspace root for `aerosync`.
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
# Required to construct the `aerosync_proto::Lifecycle` enum and
# `Metadata` envelope passed through `send_file` / `send_directory`.
aerosync-proto = { workspace = true }

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
# Enable client feature only for tests, so we can drive the in-memory rmcp
# tool router via a real ClientHandler (P3d E2E tests).
rmcp = { version = "1.4.0", features = ["server", "client", "macros", "transport-io"] }
