[package]
name = "aerosync-protocols"
version = "0.1.0"
edition = "2021"

[dependencies]
aerosync-core = { path = "../aerosync-core" }
tokio = { workspace = true }
quinn = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
bytes = "1.0"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
rcgen = "0.11"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
uuid = { workspace = true }
urlencoding = "2.1"
url = "2"
suppaftp = { version = "8.0.2", features = ["tokio"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["multipart", "json"] }
warp = "0.3"
