[package]
name = "aerosync-protocols"
description = "Pluggable transport adapters for AeroSync: HTTP/QUIC/FTP with automatic protocol negotiation."
keywords = ["aerosync", "quic", "http", "ftp", "transport"]
categories = ["network-programming"]
readme = "../README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
aerosync-core = { workspace = true }
tokio = { workspace = true }
quinn = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
bytes = "1.0"
rand = "0.8"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
rcgen = "0.11"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
uuid = { workspace = true }
urlencoding = "2.1"
url = "2"
suppaftp = { version = "8.0.2", features = ["tokio"] }
zeroize = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
reqwest = { workspace = true }
warp = "0.3"
